Solucionat el SolverTest per a tots els OS, implementat getUniqueCrossValues a KakuroConstants per a fer-la servir al generador, corregit petit error al two-sol.kak